--- a/style.css
+++ b/style.css
@@ -16,10 +16,10 @@ input.inp {
   background-color: rgba(0, 0, 0, 0);
   border-color: rgba(0, 0, 0, 0); }
 
-input#done {
+input#P1_V_02 {
   top: 234px;
   left: 202px; }
 
-input#need {
+input#P1_V_03 {
   top: 231px;
   left: 760px; }
