--- a/style.scss
+++ b/style.scss
@@ -19,12 +19,12 @@ input.inp {
   border-color     : rgba(0, 0, 0, 0)
 }
 
-input#done {
+input#P1_V_02 {
   top  : 234px;
   left : 202px;
 }
 
-input#need {
+input#P1_V_03 {
   top  : 231px;
   left : 760px
 }
